--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body{
 
 main {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
 }
@@ -99,6 +100,8 @@ color: var(--text);
       padding: 2rem 0;
       width: 100%;
       flex-direction: column;
-      gap: 3rem;
+      gap: 0.5rem;
+      height: 70vh;
+      width: 60vh;
     }
   }
